Change Signin and Register style using material-ui

--- a/src/components/Signin.css
+++ b/src/components/Signin.css
@@ -1,4 +1,4 @@
-.ba {
+/* .ba {
   border-style: solid;
   border-width: 1px;
 }
@@ -192,4 +192,4 @@
 
 .pointer:hover {
   cursor: pointer;
-}
+} */
