--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -6,3 +6,11 @@
 .char {
   font-size: 5em;
 }
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  border-top: 1px dotted #eff0f1;
+  text-align: center;
+}
