--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -8,9 +8,14 @@
 }
 #footer {
   position: absolute;
+  left: 0;
+  right: 0;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
-  border-top: 1px dotted #eff0f1;
+  height: 5rem;
+  /* border-top: 1px dotted #eff0f1; */
   text-align: center;
+  background: #3f51b5;
+  color: white;
+  font-size: 0.9em;
 }
