--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -13,9 +13,18 @@
   bottom: 0;
   width: 100%;
   height: 5rem;
-  /* border-top: 1px dotted #eff0f1; */
   text-align: center;
   background: #3f51b5;
   color: white;
   font-size: 0.9em;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 1;
 }
