--- a/src/components/Char.css
+++ b/src/components/Char.css
@@ -1,3 +1,7 @@
+.card {
+  border: 2px solid #dad1d1;
+}
+
 .correct {
   color: green;
 }
@@ -10,12 +14,32 @@
   color: #f2b50c;
 }
 
-.highlighted2 {
-  border: 3px solid #3f51b5;
+.highlighted {
+  border: 2px solid #1cb0f6;
+  cursor: pointer;
+  background-color: #ddf4ff;
 }
 
-.highlighted {
+.highlighted2 {
   outline: none;
   border: 2px solid #375ecc;
   box-shadow: 0 0 10px #3f51b5;
+}
+
+.hovered2 {
+  box-shadow: 0 0 10px #5a77c8;
+  border: 2px solid #253dc5;
+  cursor: pointer;
+  background-color: #5a77c8;
+}
+
+.hovered {
+  /* box-shadow: 0 0 10px #1cb0f6; */
+  cursor: pointer;
+  background-color: #f5f5f5;
+}
+
+.clicked {
+  border: 2px solid #1cb0f6;
+  background-color: #ddf4ff;
 }
