--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,12 @@
 .main-footer {
-  background: #3f51b5;
+  background: #1cb0f6;
   color: white;
   position: relative;
   bottom: 0;
   width: 100%;
 }
 a {
-  color: #43a6df;
+  color: #5d5d5d;
 }
 
 a:hover {
