--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,10 +5,44 @@
   bottom: 0;
   width: 100%;
 }
+
 a {
   color: white;
 }
 
 a:hover {
   color: #5d5d5d;
+}
+
+.sources {
+  text-align: left;
+  padding-left: 200px;
+}
+
+.row {
+  display: flex;
+}
+
+.col {
+  flex: 50%;
+}
+
+.list-unstyled {
+  list-style-type: none;
+}
+
+.container {
+  text-align: left;
+  padding-left: 1%;
+}
+
+.copyright {
+  margin-top: auto;
+  padding-bottom: 1em;
+  text-align: right;
+  padding-right: 1%;
+}
+
+hr {
+  border: 1px solid #1ba9ec;
 }
