--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -3,26 +3,15 @@
   align-items: center;
   justify-content: center;
 }
+
 .char {
   font-size: 5em;
 }
-/* #footer {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 5rem;
-  text-align: center;
-  background: #3f51b5;
-  color: white;
-  font-size: 0.9em;
-} */
 
 .page-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: calc(100vh);
 }
 
 .content-wrap {
