--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -11,7 +11,7 @@
 .page-container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh);
+  height: calc(130vh); /* works better than 100vh */
 }
 
 .content-wrap {
