--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -1,12 +1,8 @@
-.char-board {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.char {
-  font-size: 5em;
-}
+// .char-board {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
 
 .page-container {
   display: flex;
