slight css change

--- a/src/scss/components/SmallChar.scss
+++ b/src/scss/components/SmallChar.scss
@@ -10,3 +10,12 @@
   // margin: auto;
   // background: linear-gradient(0deg, green 50%, #f2b50c 50%);
 }
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+}
