--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: calc(130vh); /* works better than 100vh */
+  // width: calc(100vw - 15px);
 }
 
 .content-wrap {
