--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -15,4 +15,5 @@ $card-background-highlight-color: #ddf4ff;
 // links
 $link-hovered-color: #5d5d5d;
 
-$card-shadow-depth: 3px;
+$card-shadow-depth: calc(1px + 0.25vh);
+$card-border-thickness: calc(1px + 0.15vh);
