--- a/src/scss/components/SmallChar.scss
+++ b/src/scss/components/SmallChar.scss
@@ -26,12 +26,15 @@
 .flipcard-front {
   font-size: 40px;
   padding-top: 18px;
+  color: white;
 }
 
 .flipcard-back {
-  font-size: 1rem;
+  font-size: 0.95rem;
   transform: rotateY(180deg);
-  background: $primary-color;
+  background: white;
+  border: 2px solid $primary-color;
+  color: $primary-color;
 }
 
 .flipcard-front,
@@ -39,13 +42,12 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  color: white;
   backface-visibility: hidden;
   border-radius: 15px;
 }
 
 .flipcard {
-  width: 70px;
+  width: 75px;
   height: 80px;
   text-align: center;
   cursor: pointer;
@@ -64,4 +66,9 @@
 
 .flipcard:hover .flipcard-content {
   transform: rotateY(180deg);
+}
+
+.characters-list {
+  margin-top: 5vh;
+  margin-bottom: 5vh;
 }
