--- a/src/scss/components/Hint.scss
+++ b/src/scss/components/Hint.scss
@@ -1,6 +1,8 @@
-.hint-card {
-  min-height: calc(30vh);
-  padding: 2vh;
+.hint-card-content {
+  padding-bottom: 3vh;
+  padding-left: 1vh;
+  padding-right: 1vh;
+  padding-top: 1vh;
 }
 
 .hint-card-image {
