--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,6 +13,7 @@ body {
   overflow-x: hidden; /* hide horizontal overflow */
   overflow-y: scroll;
   // width: calc(100vw - 0px);
+  text-align: center;
 }
 
 code {
