alter play button looks

--- a/src/scss/components/Music.scss
+++ b/src/scss/components/Music.scss
@@ -1,8 +1,10 @@
+@import "../variables.scss";
+
 .music-button {
   height: calc(20px + 1.5vh);
 }
 
 .button-text {
-  color: white;
+  color: $primary-color;
   font-size: calc(10px + 0.5vh);
 }
