--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -41,7 +41,14 @@
 
 .audio-control {
   position: absolute;
-  right: 50px;
+  right: 70px;
+  top: 200px;
+}
+
+.message-control {
+  position: absolute;
+  right: 70px;
+  top: 240px;
 }
 
 .input-box {
