add switch to toggle blue button's visibility

--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -40,15 +40,20 @@
 }
 
 .audio-control {
-  position: absolute;
-  right: 70px;
   top: 240px;
 }
 
 .message-control {
+  top: 200px;
+}
+
+.blue-button-visibility-control {
+  top: 280px;
+}
+
+.switch-control {
   position: absolute;
   right: 70px;
-  top: 200px;
 }
 
 .input-box {
