--- a/src/scss/components/Hint.scss
+++ b/src/scss/components/Hint.scss
@@ -1,3 +1,5 @@
+@import "../variables.scss";
+
 .hint-card-content {
   padding-bottom: 3vh;
   padding-left: 1vh;
@@ -10,11 +12,12 @@
 
 .hint-text {
   font-size: calc(10px + 0.7vh);
-  padding-bottom: calc(10px + 0.5vh);
+  // padding-bottom: calc(10px + 0.5vh);
 }
 
 .hint-card-romaji {
-  color: #5e5e5e;
+  // color: #5e5e5e;
+  color: $primary-color;
   font-size: calc(10px + 2vh);
   margin: 18px;
 }
