delete button; delete walkthru; bring back help tab

--- a/src/scss/components/WordCard.scss
+++ b/src/scss/components/WordCard.scss
@@ -2,7 +2,7 @@
 
 .wordcard-pos {
   font-size: calc(10px + 1vh);
-  padding-bottom: calc(5px + 0.2vh);
+  // padding-bottom: calc(5px + 0.2vh);
 }
 
 .wordcard-subtext {
@@ -38,5 +38,5 @@
 
 .subtext-pos {
   padding-bottom: 0px;
-  padding-top: 10px;
+  padding-top: 20px;
 }
