slight css fix to make word not jerk when completed

--- a/src/scss/components/Char.scss
+++ b/src/scss/components/Char.scss
@@ -9,9 +9,11 @@
   border-radius: calc(5px + 1vh);
   margin-top: 3vh;
   margin-bottom: 3vh;
-  padding: 5px;
+  padding: 1px;
   padding-top: 0;
   padding-bottom: 0;
+  box-sizing: border-box;
+  border: $card-border-thickness solid white; // prevent slight jerkiness when complete word
 }
 
 .card-button {
