--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -3,7 +3,7 @@
 .page-container {
   display: flex;
   flex-direction: column;
-  height: calc(110vh); /* works better than 100vh */
+  height: calc(100vh + 200px); /* works better than 100vh */
   // width: calc(100vw - 15px);
 }
 
